--- a/TomocaMoviesWebsite/TomocaMoviesWebsite/Views/Shared/Admin_Layout.cshtml
+++ b/TomocaMoviesWebsite/TomocaMoviesWebsite/Views/Shared/Admin_Layout.cshtml
@@ -65,7 +65,6 @@
                         <a class="collapse-item" href="/Admin/DaoDien">Đạo Diễn</a>
                         <a class="collapse-item" href="/Admin/TheLoai">Thể loại</a>
                         <a class="collapse-item" href="~/Admin/veban">Vé xem phim</a>
-                        <a class="collapse-item" href="/Admin/rapphim">Rap xem phim</a>
                         <a class="collapse-item" href="/Admin/TinTuc">Tin tức</a>
                     </div>
                 </div>
@@ -73,11 +72,12 @@
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
                     <i class="fas fa-fw fa-user"></i>
-                    <span>Tài khoản</span>
+                    <span>Quản lý KH&DT</span>
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href="/adminmanager/users">Người dùng</a>
+                        <a class="collapse-item" href="/adminmanager/datve">Đặt vé & Doanh thu</a>
                     </div>
                 </div>
             </li>
