--- a/TomocaMoviesWebsite/TomocaMoviesWebsite/Views/Tomoca/Tickets.cshtml
+++ b/TomocaMoviesWebsite/TomocaMoviesWebsite/Views/Tomoca/Tickets.cshtml
@@ -68,7 +68,7 @@
 </div>
 <div class="nowplaying">
         <div class="nowplaying-count">
-            <p class="ccc">NOWPLAYING ()<span style="color:#5C5C5C; margin-left: 20px;">UPCOMING</span></p>
+            <p class="ccc">NOWPLAYING (@Model.Count())<span style="color:#5C5C5C; margin-left: 20px;">UPCOMING</span></p>
         </div>
 </div>
 <div class="container">
